--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,10 +2,10 @@
     {{#each avatars}}
         <div class="hero-container">
             <a href="/{{name}}">
-                <img src="/images/{{avatar}}" alt="avatar">
+                <img src="/images/{{plant_img}}" alt="avatar">
             </a>
 
-            <h3 class="hero-name">{{name}}</h3>
+            <h3 class="hero-name">{{plant_name}}</h3>
         </div>
     {{/each}} <!-- this is a repeating section -->
 
