--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import '_vars';
 @import 'modules/_home';
-@import 'modules/_bio';
+@import 'modules/_plantpage';
 
 a { text-decoration: none; color: white; text-transform: uppercase; }
