stylized desktop - ALL WORKING

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
     <main>
       {{{body}}}
     </main>
-    <img class="logo" src="/images/logo.jpg" alt="logo">
+    {{!-- <img class="logo" src="/images/logo.jpg" alt="logo"> --}}
     <footer>
     </footer>
   </body>
