--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,7 +9,7 @@ html {
   min-height: 100%; }
 
 body {
-  background: url(/public/images/agave.jpg) white;
+  background: url("/public/images/agave.jpg") white;
   color: #3a3a3a;
   font-size: 14px;
   font-family: 'Avenir', Helvetica, sans-serif;
@@ -45,7 +45,9 @@ footer {
   width: 100%;
   height: 50px;
   text-align: center;
-  padding-top: 1rem; }
+  padding-top: 1rem; 
+  margin-top: 2em;
+}
 
 #plants {
   text-align: center;
@@ -88,3 +90,33 @@ a {
   text-transform: uppercase; }
 
 /*# sourceMappingURL=main.css.map */
+
+#plantInfo
+{
+  width: 50%;
+  text-align: left;
+  margin-top: 50px;
+}
+
+#plantInfo p
+{
+  width: 75%;
+  margin-left: 50px;
+  font-size: 1.1em;
+  line-height: 1.5em;
+}
+
+#plantImg 
+{
+  width: 50%;
+  float: right;
+  margin-top: 50px;
+}
+
+#plantImg img
+{
+  width: 70%;
+  float: left;
+  margin-left: 50px;
+  
+}
