--- a/sass/modules/_plantpage.scss
+++ b/sass/modules/_plantpage.scss
@@ -1,6 +1,25 @@
-#plantImg
-{
-    width: 25%;
-    margin: 0 auto;
-    float: right;
-}
+// #plantImg 
+// {
+//     width: 50%;
+// }
+
+// //MOBILE
+// @media (max-width: 479px) {
+// #plantInfo
+// {
+//     width: 95%;
+//     text-align: left;
+//     font-size: 1em;
+// }
+// }
+
+// //TABLET
+// @media screen and (min-width: 480px) and (max-width: 769px) {
+
+// }
+
+
+// //DESKTOP
+// @media screen and (min-width: 770px) {
+
+// }
