--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
       <nav>
         <h1>Alli's Plants</h1>
         <a href="/">
-          <i class="fas fa-home"></i>
+          <i class="fas fa-home" color="#3a3a3a"></i>
         </a>
       </nav>
     </header>    
